# revoice

./: .gitignore  LICENSE.txt  README.md  app.py  demo_cli.py  pyproject.toml  utils.py
notebooks/: from-spectrogram.ipynb  transcriber  transcription.ipynb
toolbox/: __init__.py
transcriber/: ipa.py  transcriber.py
utils/: __init__.py  audio.py  models.py  text.py  transcription.py
