[tool.poetry]
name = "real-time-voice-cloning"
version = "0.1.0"
description = ""
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.7"
torch = "^1.8.1"
umap-learn = "^0.5.1"
visdom = "^0.1.8"
librosa = ">=0.8.0"
matplotlib = ">=3.3.0"
numpy = "1.19.4"
scipy = ">=1.0.0"
tqdm = "^4.61.0"
sounddevice = "^0.4.1"
SoundFile = "^0.10.3"
Unidecode = "^1.2.0"
inflect = "^5.3.0"
PyQt5 = "^5.15.4"
multiprocess = "^0.70.11"
numba = "^0.53.1"
webrtcvad = "^2.0.10"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b1", allow-prereleases = true}
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
